--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools" >
+    xmlns:tools="http://schemas.android.com/tools">
 
     <application
         android:allowBackup="true"
@@ -10,13 +10,29 @@
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/Theme.C196"
-        tools:targetApi="31" >
+        tools:targetApi="31">
+
+        <activity
+            android:name=".UI.TermDetail"
+            android:exported="false" />
+        <activity
+            android:name=".UI.AssessmentDetail"
+            android:exported="false" />
+        <activity
+            android:name=".UI.CourseDetail"
+            android:exported="false" />
+        <activity
+            android:name=".UI.AssessmentScreen"
+            android:exported="false" />
+        <activity
+            android:name=".UI.CourseScreen"
+            android:exported="false" />
         <activity
             android:name=".UI.TermScreen"
             android:exported="false" />
         <activity
             android:name=".UI.MainActivity"
-            android:exported="true" >
+            android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
