--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,6 +2,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools">
 
+    <uses-permission android:name="android.permission.POST_NOTIFICATIONS" />
     <application
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
@@ -12,7 +13,7 @@
         android:theme="@style/Theme.C196"
         tools:targetApi="31">
         <receiver
-            android:name="UI.MyReceiver"
+            android:name=".UI.MyReceiver"
             android:enabled="true"
             android:exported="true"></receiver>
 
